[package]
name = "ageusd-cli"
version = "0.1.0"
authors = ["Robert Kornacki <11645932+robkorn@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ageusd-headless              = { path = "../ageusd-headless" }
ergo-headless-dapp-framework = "0.1.9"
openssl                      = { version = "0.10", features = ["vendored"] }
reqwest                      = { version = "0.10.8", features = ["blocking"] }
ergo-lib                     = "0.4.2"
ergo-lib-wasm                = "0.4.2"
ergo-node-interface          = "0.2.3"
docopt                       = "1.1.0"
serde                        = "1.0.117"
serde_json                   = "1.0.59"
json                         = "0.12.4"
anyhow                       = "1.0.34"
crossterm                    = "0.18.2"