[package]
name = "ageusd-headless"
version = "0.1.0"
authors = ["Robert Kornacki <11645932+robkorn@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
ergo-headless-dapp-framework =  "0.1.2"
ergo-lib                     = "0.4.1"
ergo-lib-wasm                = "0.4.1"
thiserror                    = "1.0.22"
wasm-bindgen                 = "0.2.65"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]